SFUSA/force-app/main/default/objects/Account/fields/Dist_Cust_ID_2__c.field-meta.xml
<CustomField>
        <fullName>Dist_Cust_ID_2__c</fullName>
        <description>Distributor customer ID 2 which is fed from Aperity.</description>
        <label>Dist Cust ID 2</label>
        <length>35</length>
        <type>Text</type>
    </CustomField>