SFUSA/force-app/main/default/objects/Account/fields/DistributorLevel2__c.field-meta.xml
<CustomField>
        <fullName>DistributorLevel2__c</fullName>
        <label>Distributor Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allan S Goodman Inc-Total</fullName>
                </value>
                <value>
                    <fullName>All Other Distributors</fullName>
                </value>
                <value>
                    <fullName>Athens-Total</fullName>
                </value>
                <value>
                    <fullName>B &amp; T-Total</fullName>
                </value>
                <value>
                    <fullName>Badger - Total</fullName>
                </value>
                <value>
                    <fullName>Best Brands-Total</fullName>
                </value>
                <value>
                    <fullName>Brescome Barton Inc-Total</fullName>
                </value>
                <value>
                    <fullName>Connecticut Distributors Inc-Total</fullName>
                </value>
                <value>
                    <fullName>Empire - Total</fullName>
                </value>
                <value>
                    <fullName>Fedway Associates Inc-Total</fullName>
                </value>
                <value>
                    <fullName>Frank-Total</fullName>
                </value>
                <value>
                    <fullName>General Wholesale</fullName>
                </value>
                <value>
                    <fullName>Georgia Crown-Total</fullName>
                </value>
                <value>
                    <fullName>Glazer-Control</fullName>
                </value>
                <value>
                    <fullName>Glazer-South Central</fullName>
                </value>
                <value>
                    <fullName>Hartley &amp; Parker Ltd-Total</fullName>
                </value>
                <value>
                    <fullName>Horizon - Total</fullName>
                </value>
                <value>
                    <fullName>Johnson Bros-Total</fullName>
                </value>
                <value>
                    <fullName>Knoxville Bev-Total</fullName>
                </value>
                <value>
                    <fullName>M.S Walker-Total</fullName>
                </value>
                <value>
                    <fullName>Major Brands - Total</fullName>
                </value>
                <value>
                    <fullName>Phillips-Total</fullName>
                </value>
                <value>
                    <fullName>R&amp;R Marketing-Total</fullName>
                </value>
                <value>
                    <fullName>Rndc - Total</fullName>
                </value>
                <value>
                    <fullName>Star Distributors-Total</fullName>
                </value>
                <value>
                    <fullName>Sws-California</fullName>
                </value>
                <value>
                    <fullName>Sws-Central</fullName>
                </value>
                <value>
                    <fullName>Sws-Eastern</fullName>
                </value>
                <value>
                    <fullName>Sws-Florida</fullName>
                </value>
                <value>
                    <fullName>Sws-Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>