SFUSA/force-app/main/default/objects/Account/fields/DistributorMaster__c.field-meta.xml
<CustomField>
        <fullName>DistributorMaster__c</fullName>
        <label>Distributor Master</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allan S Goodman Inc</fullName>
                </value>
                <value>
                    <fullName>All Other Distributors</fullName>
                </value>
                <value>
                    <fullName>Athens</fullName>
                </value>
                <value>
                    <fullName>B &amp; T</fullName>
                </value>
                <value>
                    <fullName>Badger</fullName>
                </value>
                <value>
                    <fullName>Best Brands</fullName>
                </value>
                <value>
                    <fullName>Brescome Barton Inc</fullName>
                </value>
                <value>
                    <fullName>Connecticut Distributors Inc</fullName>
                </value>
                <value>
                    <fullName>Empire</fullName>
                </value>
                <value>
                    <fullName>Fedway Associates Inc</fullName>
                </value>
                <value>
                    <fullName>Frank</fullName>
                </value>
                <value>
                    <fullName>General Wholesale</fullName>
                </value>
                <value>
                    <fullName>Georgia Crown</fullName>
                </value>
                <value>
                    <fullName>Glazers Total</fullName>
                </value>
                <value>
                    <fullName>Hartley &amp; Parker Ltd</fullName>
                </value>
                <value>
                    <fullName>Horizon</fullName>
                </value>
                <value>
                    <fullName>Johnson Bros</fullName>
                </value>
                <value>
                    <fullName>Knoxville Bev</fullName>
                </value>
                <value>
                    <fullName>M.S Walker</fullName>
                </value>
                <value>
                    <fullName>Major Brands</fullName>
                </value>
                <value>
                    <fullName>Phillips</fullName>
                </value>
                <value>
                    <fullName>R&amp;R Marketing</fullName>
                </value>
                <value>
                    <fullName>RNDC</fullName>
                </value>
                <value>
                    <fullName>Star Distributors</fullName>
                </value>
                <value>
                    <fullName>SWS</fullName>
                </value>
                <value>
                    <fullName>Triple C</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>West Tennessee Crown Distributing</fullName>
                </value>
                <value>
                    <fullName>Wirtz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>