SFUSA/force-app/main/default/objects/Account/fields/Dupe_Key_Text__c.field-meta.xml
<CustomField>
        <fullName>Dupe_Key_Text__c</fullName>
        <inlineHelpText>Used to check uniqueness of record.</inlineHelpText>
        <label>Dupe Key - Text</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>