SFUSA/force-app/main/default/objects/Account/fields/EDGE_Account_Growth_Stage__c.field-meta.xml
<CustomField>
        <fullName>EDGE_Account_Growth_Stage__c</fullName>
        <label>EDGE Account Growth Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>Hunt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>