SFUSA/force-app/main/default/objects/Account/fields/EDGE_Route__c.field-meta.xml
<CustomField>
        <fullName>EDGE_Route__c</fullName>
        <label>EDGE Route</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>