SFUSA/force-app/main/default/objects/Account/fields/EDI_Documents__c.field-meta.xml
<CustomField>
        <fullName>EDI_Documents__c</fullName>
        <label>EDI Documents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASN</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>