SFUSA/force-app/main/default/objects/Account/fields/Expected_Annual_Revenue__c.field-meta.xml
<CustomField>
        <fullName>Expected_Annual_Revenue__c</fullName>
        <label>Expected Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>