SFUSA/force-app/main/default/objects/Account/fields/External_Id_Aperity_For_Update__c.field-meta.xml
<CustomField>
        <fullName>External_Id_Aperity_For_Update__c</fullName>
        <description>This will be used in jitterbit operation for updating External_Id_Aperity__c</description>
        <externalId>true</externalId>
        <label>External Id Aperity For Update</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>