SFUSA/force-app/main/default/objects/Account/fields/FloorStacking__c.field-meta.xml
<CustomField>
        <fullName>FloorStacking__c</fullName>
        <inlineHelpText>Is floor stacking allowed?</inlineHelpText>
        <label>Floor Stacking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>