SFUSA/force-app/main/default/objects/Account/fields/Global_Region__c.field-meta.xml
<CustomField>
        <fullName>Global_Region__c</fullName>
        <formula>Case(BillingCountry,
"United States", "United States",
"Canada", "Canada",
"Mexico", "Mexico",
"Brazil", "LATAM",
"Uruguay", "LATAM",
"Bolivia", "LATAM",
"Ecuador", "LATAM",
"Costa Rica", "LATAM",
"Guatemala", "LATAM",
"El Salvador", "LATAM",
"Peru", "LATAM",
"Chile", "LATAM",
"Surinam", "LATAM",
"Argentina", "LATAM",
"Paraguay", "LATAM",
"Panama", "LATAM",
"Belize", "LATAM",
"Other"
)</formula>
        <label>Global Region</label>
        <type>Text</type>
    </CustomField>