SFUSA/force-app/main/default/objects/Account/fields/GSC_Place_ID__c.field-meta.xml
<CustomField>
        <fullName>GSC_Place_ID__c</fullName>
        <description>Used to sync with GoSpotCheck's Place ID field</description>
        <externalId>true</externalId>
        <label>GSC Place ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>