SFUSA/force-app/main/default/objects/Account/fields/GTR_Business_Structure__c.field-meta.xml
<CustomField>
        <fullName>GTR_Business_Structure__c</fullName>
        <label>GTR Business Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EM</fullName>
                </value>
                <value>
                    <fullName>Global Accounts</fullName>
                </value>
                <value>
                    <fullName>Strategic 3P</fullName>
                </value>
                <value>
                    <fullName>VC</fullName>
                </value>
                <value>
                    <fullName>GTR HQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>